--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,30 @@
     transform: rotate(360deg);
   }
 }
+
+.leaflet-container {
+  width: 100%;
+  height: 100vh;
+}
+
+.button-group {
+  position: absolute;
+  top: 25px; right: 25px;
+  z-index: 99999999999999;
+}
+
+.button-group > button {
+  margin: 0 4px;
+  padding: 5px 10px;
+  background-color: dodgerblue;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  opacity: 1;
+}
+
+.button-group > button:disabled {
+  opacity: 0.75;
+  cursor: not-allowed;
+}
